[package]
name = "android-cli"
version = "0.1.0"
edition = "2021"
description = "Work in progress"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "android"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] } 