[package]
name = "android-cli"
version = "0.1.0"
edition = "2021"
description = "Create, build, and release Android apps faster without Android Studio."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "android"
path = "src/main.rs"

[dependencies]
# holding on clap 4.x until they figure out colors: https://epage.github.io/blog/2022/09/clap4/#polishing-help-output
clap = { version = "3.2.23", features = ["default", "derive"] } 